tests/ui/borrowck/borrowck-lend-flow-match.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/borrowck-lend-flow-match.rs:12:13
   |
LL |         Some(ref r) => {
   |              ----- `x` is borrowed here
LL |             x = Some(1);
   |             ^^^^^^^^^^^ `x` is assigned to here but it was already borrowed
LL |             drop(r);
   |                  - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
